1、gradle升级 2、文件保存 暂时只有保存 图片 3、图片展示工具类优化 4、大数字工具类优化 5、view工具类优化

--- a/example/build.gradle
+++ b/example/build.gradle
@@ -2,12 +2,12 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 android {
-    compileSdkVersion 29
+    compileSdkVersion 31
 
     defaultConfig {
         applicationId "com.jelly.thor.example"
         minSdkVersion 19
-        targetSdkVersion 29
+        targetSdkVersion 31
         versionCode 7
         versionName "1.0.7"
 
@@ -21,6 +21,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    namespace 'com.jelly.thor.example'
 
 }
 
