--- a/commonutils/src/main/AndroidManifest.xml
+++ b/commonutils/src/main/AndroidManifest.xml
@@ -1,2 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.jelly.thor.commonutils" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" />
