--- a/commonutils/build.gradle
+++ b/commonutils/build.gradle
@@ -57,4 +57,5 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.recyclerview:recyclerview:1.4.0-alpha01'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation("com.squareup.okio:okio:3.6.0")
 }
